--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.1
+distro==1.9.0
 fastapi==0.115.8
 firebase-admin==6.6.0
 google-ai-generativelanguage==0.6.15
@@ -22,12 +23,17 @@ google-crc32c==1.6.0
 google-generativeai==0.8.4
 google-resumable-media==2.7.2
 googleapis-common-protos==1.68.0
+groq==0.18.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+httpcore==1.0.7
 httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
+jiter==0.8.2
 msgpack==1.1.0
+openai==1.64.0
 proto-plus==1.26.0
 protobuf==5.29.3
 pyasn1==0.6.1
