--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.6.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.0.0",
+    "react-router-dom": "^7.2.0",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "zustand": "^4.5.2"
