--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,10 @@
+aiohappyeyeballs==2.4.8
+aiohttp==3.11.13
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+attrs==25.1.0
+bcrypt==4.3.0
 CacheControl==0.14.2
 cachetools==5.5.2
 certifi==2025.1.31
@@ -8,9 +13,16 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.1
+deprecation==2.1.0
 distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.8
+fastapi-cli==0.0.7
+fastapi-limiter==0.1.6
+firebase==4.0.1
 firebase-admin==6.6.0
+frozenlist==1.5.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.1
 google-api-python-client==2.162.0
@@ -23,33 +35,68 @@ google-crc32c==1.6.0
 google-generativeai==0.8.4
 google-resumable-media==2.7.2
 googleapis-common-protos==1.68.0
+gotrue==2.11.4
 groq==0.18.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.7
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
 jiter==0.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
 msgpack==1.1.0
+multidict==6.1.0
 openai==1.64.0
+orjson==3.10.15
+packaging==24.2
+postgrest==0.19.3
+propcache==0.3.0
 proto-plus==1.26.0
 protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
+pydantic-extra-types==2.10.2
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
-PyJWT==2.10.1
+Pygments==2.19.1
+PyJWT==2.9.0
 pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+realtime==2.4.1
 requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.13.2
 rsa==4.9
+shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
+storage3==0.11.3
+StrEnum==0.4.15
+supabase==2.13.0
+supafunc==0.9.3
 tqdm==4.67.1
+typer==0.15.2
 typing_extensions==4.12.2
+ujson==5.10.0
 uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
+watchfiles==1.0.4
+websockets==14.2
+yarl==1.18.3
