--- a/.env-example
+++ b/.env-example
@@ -6,5 +6,6 @@ GROQ_API_KEY=""
 
 FIREBASE_CREDENTIALS=/app/firebase.json
 
-REDIS_HOST=
-REDIS_PORT
+REDIS_HOST=localhost
+REDIS_PORT=6379
+DOCKER_ENV=0
