--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@monaco-editor/react": "^4.6.0",
+    "@monaco-editor/react": "^4.7.0",
     "@types/diff": "^7.0.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "diff": "^7.0.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.344.0",
+    "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.0.0",
     "react-router-dom": "^7.2.0",
     "react-syntax-highlighter": "^15.6.1",
@@ -27,12 +29,18 @@
     "react-type-animation": "^3.2.0",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1",
+    "y-monaco": "^0.1.6",
+    "y-webrtc": "^10.3.0",
+    "y-websocket": "^3.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
